# docker-bob

./: .gitignore  .stylelintrc.json  Cargo.toml  Dockerfile  MIGRATION_DOCUMENTATION.md  README.md  docker-compose.yml  package.json  server.js
data/: contacts.db
public/: app.js  base.css  components.css  index.html  layout.css  styles.css  themes.css
sql/: init.sql
src/: database.rs  error.rs  handlers.rs  main.rs  middleware_funcs.rs  models.rs
