[package]
name = "crm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json", "multipart"] }

# File processing
csv = "1.3"
calamine = "0.25"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utility
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Async file operations
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Password hashing (for future auth)
argon2 = "0.5"

# File uploads and object storage
object_store = { version = "0.11", features = ["aws"] }

# URL encoding
urlencoding = "2.1"
